.metadata/.plugins/org.eclipse.cdt.ui/Examples_SD.build.log
21:24:25 **** Incremental Build of configuration Release for project Examples_SD ****
"C:\\Program Files\\Arduino Eclipse Neon\\arduinoPlugin\\tools\\make\\make" all 
'Building file: ../.ino.cpp'
'Starting C++ compile'
"C:\Program Files\Arduino Eclipse Neon\arduinoPlugin\tools\arduino\avr-gcc\4.9.2-atmel3.5.3-arduino2/bin/avr-g++" -c -g -Os -std=gnu++11 -fpermissive -fno-exceptions -ffunction-sections -fdata-sections -fno-threadsafe-statics -MMD -flto -mmcu=atmega2560 -DF_CPU=16000000L -DARDUINO=10609 -DARDUINO_AVR_MEGA2560 -DARDUINO_ARCH_AVR   -I"C:\Program Files\Arduino Eclipse Neon\arduinoPlugin\packages\arduino\hardware\avr\1.6.16\cores\arduino" -I"C:\Program Files\Arduino Eclipse Neon\arduinoPlugin\packages\arduino\hardware\avr\1.6.16\variants\mega" -I"D:\Arduino\Libraries\SdFat" -I"D:\Arduino\Libraries\SdFat\src" -I"C:\Program Files\Arduino Eclipse Neon\arduinoPlugin\packages\arduino\hardware\avr\1.6.16\libraries\SPI" -I"C:\Program Files\Arduino Eclipse Neon\arduinoPlugin\packages\arduino\hardware\avr\1.6.16\libraries\SPI\src" -MMD -MP -MF".ino.cpp.d" -MT".ino.cpp.o" -D__IN_ECLIPSE__=1 -x c++ "../.ino.cpp" -o ".ino.cpp.o"  -Wall
In file included from ../.ino.cpp:29:0:
../SdFormatter.ino: In function 'void loop()':
../SdFormatter.ino:526:6: error: redefinition of 'void loop()'
 void loop() {}
      ^
../.ino.cpp:26:6: note: 'void loop()' previously defined here
 void loop() {};
      ^
In file included from ../.ino.cpp:10:0:
D:\Arduino\Libraries\SdFat\src/FreeStack.h: At global scope:
D:\Arduino\Libraries\SdFat\src/FreeStack.h:34:12: warning: 'int FreeStack()' defined but not used [-Wunused-function]
 static int FreeStack() {
            ^
make: *** [subdir.mk:26: .ino.cpp.o] Error 1

21:24:25 Build Finished (took 470ms)

